		Windows-specific changes to R
		=============================

See the file NEWS for changes that affect all versions of R.


rw1031
======

Lines with lty > 1 and many pieces were being drawn very slowly on
Windows 2000 (but not 98/ME).  To work around this, such lines are
now drawn 5000 pieces at a time.

The dialog for the `Change dir' item now uses a standard folder
selection widget for its Browse button.

White backgrounds are now omitted for metafiles (as they are for
postscript, PDF and XFig plots), so white backgounds (the default)
appear to be transparent.

help.start() now updates the HTML search index (as well as the
packages index) when it is started up.  link.html.help() works better
when R_LIBS omits the drive, and uses relative links for the main
library, so R installations can be relocated in the file system.

Rcmd INSTALL now rejects invalid options for --docs (rather than
ignoring them), and checks for the R version in the DESCRIPTION file
exactly the same way as Rcmd check (so with fewer spurious messages).

Added support for building with the ATLAS optimized BLAS library: on a
PII this speeds up La.svd on a 500x500 matrix by about 30%, and the
multiplication of two 1000x1000 matrices by about 8x. See INSTALL.

The recommended compiler sysrem has been changed, but that recommended
for rw1030 still works.



rw1030
======

SetupR.exe and miniR* now include the nine `recommended' packages,
so the miniR* distribution needs six floppies rather than four.

Rgui has a new menu `Packages' with items to load packages, to install
packages from CRAN or from local zip files, and to update packages.

The packages list shown by help.start() now includes all packages in
all libraries, but the search index is still confined to the system
library.

The installers set up a file association for *.RData files, so
double-clicking on a *.RData file launches R in that directory and
loads the *.RData file.  Also, a *.RData file can be dropped onto a