@@ -35,8 +35,8 @@ graphappmain.o: ../graphapp/graphappmain.c
 	$(CC) -c -o $@ -I../graphapp $(CFLAGS) $^
 
 Rgui-LINKFLAGS=-mwindows
-Rterm-LIBS=-luser32 -L.. -lR
-Rgui-LIBS=-L.. -lR
+Rterm-LIBS=-luser32 ../R.dll
+Rgui-LIBS=../R.dll
 rgui-CFLAGS=-DWin32
 rterm-CFLAGS=-DWin32
 
