@@ -12,7 +12,7 @@ current links at http://www.stats.ox.ac.uk/pub/Rtools/.
 
 
 You will need suitable versions of at least make, sh, cat, cp, diff,
-echo, g(awk), mkdir, mv, rm, sed; we have packaged a set at
+echo, mkdir, mv, rm, sed; we have packaged a set at
 http://www.stats.ox.ac.uk/pub/Rtools/tools.zip extracted from the
 cygwin distribution (http://www.cygwin.com/mirrors.html) or (gzip)
 compiled from the sources.
@@ -22,22 +22,17 @@ the mingw site).  There were also problems with several earlier
 versions of the cygwin tools and dll.  To avoid frustration, please
 use our tool set.
 
+We recommend that you use a recent snapshot of the mingw port of gcc
+from http://prdownloads.sourceforge.net/mingw/.  For example, at the
+time of writing, Mingw-1.0.1-20010726.tar.gz based on gcc-2.95.3.
+Just unpack this somewhere and put its bin directory in your path.
 
-We recommend that you use the mingw port of gcc-2.95.2-1 by Mumit
-Khan from http://www.mingw.org/.  (The `portal' gives more precise
-instructions on the current locations.)  As R itself is built against
-msvcrt.dll, we strongly recommend that you use that version of the
-compilers.
+You can also use the mingw port of gcc-2.95.2-1 by Mumit Khan linked
+from http://www.mingw.org/, but you *cannot* use earlier versions of
+the mingw compilers, for example gcc-2.95.2 (no -1): the symptom is a
+report that `-shared' is not understood.
 
-BEWARE: you *cannot* use earlier versions of the mingw compilers, for
-example gcc-2.95.2 (no -1): the symptom is a report that `-shared'
-is not understood.
-
-An alternative is to use a more recent snapshot of the mingw compiler
-set from http://prdownloads.sourceforge.net/mingw/, for example that
-in file Mingw-1.0.1-20010726.tar.bz2.  This is based on gcc 2.95.3.
-
-It might also be possible to use the compilers from the cygwin 1.1 net
+It *might* also be possible to use the compilers from the cygwin 1.1 net
 release with the -mno-cygwin -mwin32 flags; the current versions use
 mscrt.dll.  (You will need the cygwin, gcc, mingw32, w32api and
 binutils bundles.  All the recent versions we have tried do not work
@@ -76,17 +71,6 @@ BEWARE: if you have Norton Anti-Virus you may need to disable it.
 Some versions lock up the machine when windres is run.
 
 BEWARE: Don't expect this to work if the path to R_HOME contains spaces.
-
-Then
-
-	cd R_HOME\src\gnuwin32
-	make libR.a
-
-which might take several minutes. (We have seen times from 5 secs to
-20 minutes depending on compiler version, processor speed, RAM, disk
-speed and compiler.)  This only needs to be done once for each R
-release, and should be done automatically when needed if omitted at
-this point.
 
 
 At this point there are two approaches:
