@@ -4,6 +4,14 @@
 See the file NEWS for changes that affect all versions of R.
 
 
+rw1040
+======
+
+libR.a is no longer used as the recommended compiler can import
+directly from R.dll.
+
+
+
 rw1031
 ======
 
